[gd_scene load_steps=2 format=3 uid="uid://cxvkdcvt65owm"]

[ext_resource type="Script" path="res://scenes/authentication.gd" id="1_lupyu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lupyu")

[node name="SignInPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SignInContainer" type="VBoxContainer" parent="SignInPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SignInErrorMessageLabel" type="Label" parent="SignInPanel/SignInContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.376471, 0.309804, 1)

[node name="EmailInput" type="TextEdit" parent="SignInPanel/SignInContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordInput" type="TextEdit" parent="SignInPanel/SignInContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Password"

[node name="HBoxContainer" type="HBoxContainer" parent="SignInPanel/SignInContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LoginButton" type="Button" parent="SignInPanel/SignInContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Log in"

[node name="RegisterButton" type="Button" parent="SignInPanel/SignInContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Register"

[node name="UserNameContainer" type="VBoxContainer" parent="SignInPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UsernameErrorMessageLabel2" type="Label" parent="SignInPanel/UserNameContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.376471, 0.309804, 1)

[node name="UsernameInput" type="TextEdit" parent="SignInPanel/UserNameContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Username"

[node name="HBoxContainer2" type="HBoxContainer" parent="SignInPanel/UserNameContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NextButton" type="Button" parent="SignInPanel/UserNameContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[connection signal="pressed" from="SignInPanel/SignInContainer/HBoxContainer/LoginButton" to="." method="OnLoginButtonPressed"]
[connection signal="pressed" from="SignInPanel/SignInContainer/HBoxContainer/RegisterButton" to="." method="OnRegisterButtonPressed"]
